# PRS

./: .gitignore  AGENTS.md  README.md  calculate_prs.py  create_mapping.py  create_mapping_bcftools.py  links.txt  prs_results.example.csv  prs_summary.example.txt  pyproject.toml  requirements.txt  rsid_positions_cache.example.json
scripts/: calculate_prs.py  create_mapping_bcftools.py
