[project]
name = "prs-calculation"
version = "0.1.0"
description = "Polygenic Risk Score calculation pipeline using Nucleus Origin reference"
requires-python = ">=3.9"
dependencies = [
    "pysam>=0.21.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
